# xlribbon

./: README.md  pyproject.toml
notebooks/: .rels  01_ribbon.ipynb  edit_addin.ipynb
tests/: test_xlribbon.py
xlribbon/: ribbon.py  router.py  templates.py  xmlmodels.py
