[tool.poetry]
name = "xlribbon"
version = "0.1.0"
description = ""
authors = ["FabianGoessling <Fabian.Goessling@me.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
xlwings = "^0.27.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
